--- a/CompressionTest/CompressionTest.csproj
+++ b/CompressionTest/CompressionTest.csproj
@@ -14,6 +14,21 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -52,17 +67,21 @@
   <ItemGroup>
     <Compile Include="Compression\Algorithms\DeflateCompression.cs" />
     <Compile Include="Compression\Algorithms\GZipCompression.cs" />
+    <Compile Include="Compression\Data\Structure\CompressionSpecificationStructure.cs" />
     <Compile Include="Compression\Strategy\Compression.cs" />
     <Compile Include="Compression\FabricMethods\CompressionFabricMethod.cs" />
     <Compile Include="Compression\Enums\CompressionEnums.cs" />
     <Compile Include="Compression\Interfaces\ICompressionStrategy.cs" />
     <Compile Include="Compression\Utils\API.cs" />
+    <Compile Include="Compression\Utils\MagicNumbersAlgorithmDictionary.cs" />
     <Compile Include="Computation\Algorithm\Realizations\LowestIdleTime.cs" />
+    <Compile Include="Computation\Data\AbstractClasses\AbstractWorkerProvider.cs" />
     <Compile Include="Computation\Data\ByteBlock.cs" />
     <Compile Include="Computation\Data\Structures\StrategyResult.cs" />
     <Compile Include="Computation\Data\Workers\BlockCpuWorker.cs" />
     <Compile Include="Computation\Data\Workers\BlockDiskWorker.cs" />
     <Compile Include="Computation\FabricMethods\AlgorithmFactoryMethod.cs" />
+    <Compile Include="Computation\Utils\GetComputationInfo.cs" />
     <Compile Include="Computation\Utils\ResourceCheck.cs" />
     <Compile Include="Computation\Algorithm\StrategyChooser.cs" />
     <Compile Include="Computation\Enums\ComputationEnums.cs" />
@@ -76,17 +95,20 @@
     <Compile Include="IO\Interfaces\IBlockProvider.cs" />
     <Compile Include="IO\FabricMethods\IOFabricMethod.cs" />
     <Compile Include="IO\Utils\API.cs" />
-    <Compile Include="IO\Utils\ChechkTheFreeSpace.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\Tests.cs" />
     <Compile Include="Utils\CLI\Commands.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Compression\Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
