--- a/CompressionTest/CompressionTest.csproj
+++ b/CompressionTest/CompressionTest.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9EFB6F99-6B11-4D91-B4F7-006F5ACA3231}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>CompressionTest</RootNamespace>
-    <AssemblyName>CompressionTest</AssemblyName>
+    <AssemblyName>GZipTest</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
